force-app/main/default/objects/LeadLogValidHeader__c/LeadLogValidHeader__c.object-meta.xml
<CustomObject>
    <label>LeadLogValidHeader</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>LeadLogHeader Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeadLogValidHeader</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>