force-app/main/default/objects/LeadLogValidHeader__c/fields/delete__c.field-meta.xml
<CustomField>
    <fullName>delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>delete</label>
    <type>Checkbox</type>
</CustomField>