force-app/main/default/objects/LeadLogValidHeader__c/fields/isImportDone__c.field-meta.xml
<CustomField>
    <fullName>isImportDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isImportDone</label>
    <type>Checkbox</type>
</CustomField>