force-app/main/default/objects/LeadLogValidHeader__c/fields/isImportProgress__c.field-meta.xml
<CustomField>
    <fullName>isImportProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isImportProgress</label>
    <type>Checkbox</type>
</CustomField>