force-app/main/default/objects/LeadLogValidHeader__c/fields/isValidDone__c.field-meta.xml
<CustomField>
    <fullName>isValidDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isValidDone</label>
    <type>Checkbox</type>
</CustomField>