force-app/main/default/objects/LeadLogValidHeader__c/fields/isValidProgress__c.field-meta.xml
<CustomField>
    <fullName>isValidProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isValidProgress</label>
    <type>Checkbox</type>
</CustomField>