force-app/main/default/objects/LeadLogValidHeader__c/fields/isValidSuccess__c.field-meta.xml
<CustomField>
    <fullName>isValidSuccess__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isValidSuccess</label>
    <type>Checkbox</type>
</CustomField>